add slides and video

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,8 @@
   abstract={Network operators need to run diverse measurement tasks on programmable switches to support management decisions (e.g., traffic engineering or anomaly detection). While prior work has shown the viability of running a single sketch instance, they largely ignore the problem of running an ensemble of sketch instances for a collection of measurement tasks. As such, existing efforts fall short of efficiently supporting a general ensemble of sketch instances. In this work, we present the design and implementation of Sketchovsky, a novel cross-sketch optimization and composition framework. We identify five new cross-sketch optimization building blocks to reduce critical switch hardware resources. We design efficient heuristics to select and apply these building blocks for arbitrary ensembles. To simplify developer effort, Sketchovsky automatically generates the composed code to be input to the hardware compiler. Our evaluation shows that Sketchovsky makes ensembles with up to 18 sketch instances become feasible and can reduce up to 45% of the critical hardware resources.},
   year={2023},
   pdf={nsdi23fall-final119.pdf},
-  selected={true}
+  selected={true},
+  slides={sketchovsky.pptx},
 }
 
 @inproceedings{sketchlib,
@@ -20,7 +21,9 @@
   abstract={Sketching algorithms or sketches enable accurate network measurement results with low resource footprints. While emerging programmable switches are an attractive target to get these benefits, current implementations of sketches are either inefficient and/or infeasible on hardware. Our contributions in the paper are: (1) systematically analyzing the resource bottlenecks of existing sketch implementations in hardware; (2) identifying practical and correct-by-construction optimization techniques to tackle the identified bottlenecks; and (3) designing an easy-to-use library called SketchLib to help developers efficiently implement their sketch algorithms in switch hardware to benefit from these resource optimizations. Our evaluation on state-of-the-art sketches demonstrates that SketchLib reduces the hardware resource footprint up to 96% without impacting fidelity.},
   year={2022},
   pdf={nsdi22-sketchlib.pdf},
-  selected={true}
+  selected={true},
+  slides={sketchlib.pptx},
+  website={https://www.youtube.com/watch?v=FwDljFlXXCA&t=1s},
 }
 
 @inproceedings{accusketch,
@@ -31,7 +34,9 @@
   abstract={Sketching algorithms or sketches are attractive as telemetry capabilities on programmable hardware switches since they offer rigorous accuracy guarantees and use compact data structures. However, we find that in practice, their actual implementations can have a significant (up to 94\times×) accuracy drop compared to theoretical expectations. We find that the delays incurred by pulling and resetting the data plane state induce accuracy degradation. We design and implement solutions to reduce the delays and show that our solutions can help eliminate almost all the inaccuracy of existing sketch workflows.},
   year={2021},
   pdf={sosr21-telemetry.pdf},
-  selected={true}
+  selected={true},
+  slides={sosr.pptx},
+  website={https://drive.google.com/file/d/10-c1QF2SzY579enC8_FY3u0HTQsQDR2g/view?usp=share_link},
 }
 
 @inproceedings{liu2021jaqen,
