new paper is added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@inproceedings{seamez,
+  abbr={CHI},
+  title={SEAM-EZ: Simplifying Stateful Analytics through Visual Programming (to appear)},
+  author={Zhengyan Yu, \underline{Hun Namkung}, Jiang Guo, Henry Milner, Joel Goldfoot, Yang Wang, Vyas Sekar},
+  booktitle={In Proceedings of the ACM Conference on Human Factors in Computer Systems (CHI)},
+  year={2024},
+}
+
 @inproceedings{sketchovsky,
   abbr={NSDI},
   title={Sketchovsky: Enabling Ensembles of Sketches on Programmable Switches},
